--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,3 +156,57 @@
   padding: 0;
   box-shadow: 0 8px var(--light-4), 0 16px var(--light-4);
 }
+
+.button-send {
+  font-family: inherit;
+  font-size: 20px;
+  display: flex;
+  margin-left: 10px;
+  align-items: center;
+  border: none;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+.button-send:hover .button-send-svg-wrapper {
+  animation: fly-1 0.6s ease-in-out infinite alternate;
+}
+
+.button-send svg {
+  transition: all 0.2s;
+}
+
+.button-send:hover svg {
+  transform: translateX(-0.3rem) rotate(45deg) scale(1.1);
+  color: var(--primary-color);
+}
+
+.button-send:active {
+  transform: scale(0.95);
+}
+
+@keyframes fly-1 {
+  from {
+    transform: translateY(0.05em);
+  }
+
+  to {
+    transform: translateY(-0.05em);
+  }
+}
+
+.file-clip {
+  height: 24px;
+  width: 24px;
+  stroke-width: 1.3px;
+  stroke: white;
+  fill: none;
+  cursor: pointer;
+  transition: 0.3s all ease;
+  transform: rotate(0deg);
+}
+
+.file-clip:hover {
+  stroke: var(--primary-color);
+  transform: rotate(-10deg);
+}
