--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,17 +211,54 @@
   transform: rotate(-10deg);
 }
 
-.emoji-picker * {
-  background: #000;
-  color: #000;
-  stroke: #000;
-  fill: #000;
+.container-input {
+  position: relative;
+  width: 100%;
+  margin-top: 5px;
 }
 
-.emoji-picker > *:hover {
-  background: #000;
+.container-input input {
+  width: 100%;
+  background: transparent;
+  outline: none;
+  border: none;
+  color: #ffffff;
+  padding: 4px;
 }
 
-.epr_-99lr9q {
-  background: #000;
+.container-input label {
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: rgba(220, 220, 220, 0.7);
+  text-transform: uppercase;
+  pointer-events: none;
+  transition: .5s;
+  font-weight: bold;
+  font-size: .8rem;
+  transform: translateY(8px);
+}
+.container-input input:valid ~ label,
+.container-input input:focus ~ label {
+  color: var(--primary-color);
+  transform: translateY(-12px);
+  font-size: .7rem;
+}
+
+.container-input i {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #222;
+}
+
+.container-input i:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: var(--dark-5);
+  animation: animate 3s linear infinite;
 }
