--- a/src/components/SheetProfile/_components/SwitchTheme/styles.css
+++ b/src/components/SheetProfile/_components/SwitchTheme/styles.css
@@ -20,13 +20,13 @@
   right: 0;
   bottom: 0;
   background-color: #fff;
-  transition: .4s;
+  transition: 0.4s;
   border-radius: 24px;
 }
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 22px;
   width: 22px;
   border-radius: 20px;
@@ -34,7 +34,7 @@
   bottom: 4px;
   z-index: 2;
   background-color: #777777;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .sun svg {
@@ -56,14 +56,14 @@
   height: 20px;
 }
 
-/* .switch:hover */.sun svg {
+/* .switch:hover */
+.sun svg {
   animation: rotate 15s linear infinite;
   fill: #ecb943;
   stroke: #ecb943;
 }
 
 @keyframes rotate {
- 
   0% {
     transform: rotate(0);
   }
@@ -73,12 +73,12 @@
   }
 }
 
-/* .switch:hover */.moon svg {
+/* .switch:hover */
+.moon svg {
   animation: tilt 5s linear infinite;
 }
 
 @keyframes tilt {
- 
   0% {
     transform: rotate(0deg);
   }
